# splines

./: CMakeLists.txt  README.md
include/: BSpline.h  CubicSpline.h  PolySpline.h  Spline.h
src/: BSpline.cpp  CubicSpline.cpp  PolySpline.cpp  Spline.cpp
